Improve CVE-2024-56337 protection